artifacts/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sendnotify
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: sendnotify
      lbtype: internal
      sendlogs: "true"
  replicas: 1
  template:
    metadata:
      labels:
        app: sendnotify
        version: "1.0.0"
        lbtype: internal
        sendlogs: "true"
    spec:
      serviceAccountName: sa-sendnotify
      containers:
      - name: sendnotify
        image: gru.ocir.io/grrgazcoqsuy/mutant-app-base:ocisendnotify-1.0.0 
        imagePullPolicy: IfNotPresent
        command:
          - "gunicorn"
          - "-w"
          - "1"
          - "-b"
          - "0.0.0.0:8080"
          - "wsgi:app"
          - "--capture-output"
          - "--log-level=debug"
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.2"
            memory: 128Mi
          requests:
            cpu: "0.1"
            memory: 64Mi
