artifacts/04-sendnotify-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-sendnotify
  namespace: observability
  labels:
    app: sendnotify
spec:
  clusterIP: None
  selector:
    app: sendnotify
  ports:
  - name: sendnotify
    port: 80
    targetPort: 8080
    protocol: TCP
