artifacts/06-sendnotify-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sendnotify-ingress
  namespace: monitoring
  labels:
    app: sendnotify
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "sendnotify.dominio.com.br"
      secretName: "sendnotify-tls"
  rules:
    - host: "sendnotify.dominio.com.br"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-sendnotify
                port:
                  name: sendnotify
